syntax = "proto3";
package milvus.proto.internal;
option go_package = "github.com/zilliztech/milvus-distributed/internal/proto/internalpb2";

import "common.proto";


enum StateCode {
  INITIALIZING = 0;
  HEALTHY = 1;
  ABNORMAL = 2;
}


message NodeStates {
  int64  nodeID = 1;
  string role = 2;
  StateCode state_code = 3;
  repeated common.KeyValuePair extra_info = 4;
}

message ServiceStates {
  StateCode state_code = 1;
  repeated NodeStates node_states = 2;
  repeated common.KeyValuePair extra_info = 3;
}

message  NodeInfo {
  common.Address address = 1;
  string role = 2;
}

message InitParams {
  int64 nodeID = 1;
  repeated common.KeyValuePair start_params = 2;
}

message StringList {
  repeated string values = 2;
}

message TimeTickMsg {
  common.MsgBase base = 1;
}

